{
    "name": "InputActions",
    "maps": [
        {
            "name": "BuildingMapping",
            "id": "4177c94a-7ebf-4faf-867e-546fce8d77ca",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "d5aa0123-35d8-49c7-8833-482363853d53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f7800e1-657c-438e-9380-15703300c873",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}